# neuroplay-desktop

./: .gitignore  package-lock.json  package.json
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
www/: index.html
